2008-03-20  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/getopt/Parser.java (options): Don't
	initialize.
	(add, addFinal): Don't update options.
	(requireOptions): New method.
	(printHelp): Synchronize.  Call requireOptions.
	(parse): Call requireOptions.

2008-03-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* gnu/java/lang/CPStringBuilder.java:
	(indexOf(String,int)): Use regionMatches from String.
	(lastIndexOf(String,int)): Likewise.
	(regionMatches(int,String)): Removed broken code.
	(substring(int,int)): Rearrange index computation so
	it is only computed if valid.
	
2008-03-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* gnu/xml/transform/AbstractNumberNode.java,
	* gnu/xml/transform/ApplyTemplatesNode.java,
	* gnu/xml/transform/AttributeNode.java,
	* gnu/xml/transform/Bindings.java,
	* gnu/xml/transform/CallTemplateNode.java,
	* gnu/xml/transform/ChooseNode.java,
	* gnu/xml/transform/CopyNode.java,
	* gnu/xml/transform/CopyOfNode.java,
	* gnu/xml/transform/ElementNode.java,
	* gnu/xml/transform/ForEachNode.java,
	* gnu/xml/transform/IfNode.java,
	* gnu/xml/transform/MessageNode.java,
	* gnu/xml/transform/ParameterNode.java,
	* gnu/xml/transform/ProcessingInstructionNode.java,
	* gnu/xml/transform/StreamSerializer.java,
	* gnu/xml/transform/Template.java,
	* gnu/xml/transform/TextNode.java,
	* gnu/xml/transform/TransformerImpl.java,
	* gnu/xml/transform/TransformerOutputProperties.java,
	* gnu/xml/transform/ValueOfNode.java,
	* gnu/xml/transform/WhenNode.java:
	Use CPStringBuilder in preference to StringBuffer.

2008-03-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* gnu/java/lang/CPStringBuilder.java:
	Replace reflection code with calls to
	VMCPStringBuilder.
	* vm/reference/gnu/java/lang/VMCPStringBuilder.java:
	Default implementation of constructor call
	using reflection.
	
2008-03-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869