@@ -1,3 +1,11 @@
+2008-03-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/text/SimpleDateFormat.java:
+	(standardChars): Corrected.
+	(RFC822_TIMEZONE_FIELD): Added.
+	(formatWithAttribute(Date,FormatBuffer,FieldPosition)):
+	Support RFC822 timezone field ('Z').
+	
 2008-03-20  Tom Tromey  <tromey@redhat.com>
 
 	* tools/gnu/classpath/tools/getopt/Parser.java (options): Don't
